# shipra-alerts-mcp-py

./: Prompt.md  README.md  alerts_mcp.py  api.py  apis.py  auth.py  config.json  create_alert.py  main.py  pyproject.toml  server.py
