[project]
name = "shipra-alerts-mcp-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "fastapi-mcp>=0.4.0",
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "requests>=2.33.0",
    "uvicorn>=0.42.0",
]
